# motius-project

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yaml
src/: settings.py
src/routes/: chat_router.py
tests/: conftest.py
